[package]
name = "langtons-ant"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy_embedded_assets = "0.11.0"
bevy_pancam = "0.12.0"
clap = { version = "4.5", features = ["derive"] }
image = "0.25.2"
itertools = "0.13.0"
rand = "0.8.5"
winit = "0.30.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
